# gnss-raw-and-supl

GNSSLogger/: build.gradle  gradle.properties  settings.gradle
GNSSLogger/app/: build.gradle  local.properties
GNSSLogger/app/gradle/wrapper/: gradle-wrapper.properties
GNSSLogger/app/src/main/: AndroidManifest.xml
GNSSLogger/app/src/main/java/com/google/android/apps/location/gps/gnsslogger/: AndroidLoggingHandler.java  MainActivity.java  PlotFragment.java  RealTimePositionVelocityCalculator.java
GNSSLogger/gradle/wrapper/: gradle-wrapper.properties
GNSSLogger/nequick/: build.gradle
GNSSLogger/nequick/src/androidTest/java/com/gnssdipgroup/nequick/: ExampleInstrumentedTest.java
GNSSLogger/nequick/src/main/: AndroidManifest.xml
GNSSLogger/nequick/src/main/c/nequickNative/: CMakeLists.txt  NeQuickG_JNI_wrapper.c  NeQuickG_JRC_entryPoint.c  NeQuickG_JRC_exception.h  NeQuickG_JRC_input_data_std_stream.c  NeQuickG_JRC_input_data_std_stream.h  NeQuickG_JRC_main.c
GNSSLogger/nequick/src/main/c/nequickNative/lib/: NeQuickG_JRC.c
GNSSLogger/nequick/src/main/java/com/gnssdipgroup/nequick/: NeQuickException.java  NeQuickHelper.java
GNSSLogger/nequick/src/test/java/com/gnssdipgroup/nequick/: ExampleUnitTest.java
GNSSLogger/pseudorange/: build.gradle
GNSSLogger/pseudorange/src/main/java/com/google/location/lbs/gnss/gps/pseudorange/: GnssInsideLogger.java  GpsMathOperations.java  GpsMeasurement.java  GpsNavigationMessageStore.java  IonoConfig.java  IonosphericModel.java  PseudorangePositionVelocityFromRealTimeEvents.java  ResidualCorrectionCalculator.java  SatelliteClockCorrectionCalculator.java  SatellitePositionCalculator.java  UserPositionVelocityWeightedLeastSquare.java
GNSSLogger/supl-client/: build.gradle  local.properties  pom.xml  settings.gradle
GNSSLogger/supl-client/gradle/wrapper/: gradle-wrapper.properties
GNSSLogger/supl-client/src/main/: AndroidManifest.xml
GNSSLogger/supl-client/src/main/java/com/google/location/suplclient/ephemeris/: EphemerisResponse.java
GNSSLogger/supl-client/src/main/java/com/google/location/suplclient/supl/: Ephemeris.java  SuplClient.java  SuplConstants.java  SuplLppClient.java  SuplLppClientHelper.java  SuplTester.java
GNSSLogger/supl-client/src/main/proto/: ephemeris.proto
opensource/: ProcessAdr.m  ProcessGnssMeasScript.m
opensource/demoFiles/: SensorLog.txt  SensorLog2.txt  SensorLog3.txt  SensorLog4.txt  gnss_log_2020_09_14_16_20_55.txt  gnss_log_2020_09_16_10_07_44.txt  hour2580.20g  hour2580.20g.Z  hour2580.20n  hour2600.20n  raw.csv
